# vaultex-mpc-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LESSONS.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  skills-lock.json
.agents/skills/git-cp/: skill.md
.cargo/: audit.toml
.claude/agents/: r0-architect.md  r1-crypto.md  r2-infra.md  r3-chain.md  r4-service.md  r5-qa.md  r6-security.md  r7-pm.md
.github/workflows/: ci.yml  release.yml
crates/mpc-wallet-chains/: Cargo.toml
crates/mpc-wallet-chains/benches/: chain_benchmarks.rs
crates/mpc-wallet-chains/src/: lib.rs  provider.rs  registry.rs  signer.rs
crates/mpc-wallet-chains/src/aptos/: address.rs  mod.rs  signer.rs  tx.rs
crates/mpc-wallet-chains/src/bitcoin/: address.rs  mod.rs  signer.rs  tx.rs
crates/mpc-wallet-chains/src/cosmos/: address.rs  mod.rs  tx.rs
crates/mpc-wallet-chains/src/evm/: address.rs  mod.rs  signer.rs  tx.rs
crates/mpc-wallet-chains/src/monero/: address.rs  mod.rs  tx.rs
crates/mpc-wallet-chains/src/rpc/providers/: alchemy.rs  dwellir.rs  infura.rs
crates/mpc-wallet-chains/src/solana/: mod.rs  signer.rs  tx.rs
crates/mpc-wallet-chains/src/starknet/: address.rs  mod.rs  tx.rs
crates/mpc-wallet-chains/src/substrate/: mod.rs  tx.rs
crates/mpc-wallet-chains/src/sui/: address.rs  mod.rs  signer.rs  tx.rs
crates/mpc-wallet-chains/src/ton/: mod.rs  tx.rs
crates/mpc-wallet-chains/src/tron/: address.rs  mod.rs  tx.rs
crates/mpc-wallet-chains/src/utxo/: address.rs  broadcast.rs  mod.rs  simulation.rs  tx.rs
crates/mpc-wallet-chains/tests/: chain_aptos_integration.rs  chain_bitcoin_integration.rs  chain_cggmp21_integration.rs  chain_common.rs  chain_cosmos_integration.rs  chain_evm_integration.rs  chain_integration.rs  chain_monero_integration.rs  chain_solana_integration.rs  chain_starknet_integration.rs  chain_substrate_integration.rs  chain_sui_integration.rs  chain_ton_integration.rs  chain_tron_integration.rs  chain_utxo_integration.rs  signature_verification.rs
crates/mpc-wallet-cli/: Cargo.toml
crates/mpc-wallet-cli/src/: main.rs  output.rs
crates/mpc-wallet-cli/src/commands/: audit_verify.rs  keygen.rs  mod.rs  sign.rs  simulate.rs
crates/mpc-wallet-cli/tests/: cli_audit_verify.rs
crates/mpc-wallet-core/: Cargo.toml
crates/mpc-wallet-core/benches/: mpc_benchmarks.rs
crates/mpc-wallet-core/fuzz/: Cargo.toml
crates/mpc-wallet-core/fuzz/fuzz_targets/: paillier_ops.rs  protocol_message.rs  share_data.rs
crates/mpc-wallet-core/src/: delegation.rs  error.rs  lib.rs  types.rs
crates/mpc-wallet-core/src/audit/: mod.rs
crates/mpc-wallet-core/src/enclave/: attestation.rs  mock.rs  mod.rs
crates/mpc-wallet-core/src/identity/: mod.rs
crates/mpc-wallet-core/src/key_store/: encrypted.rs  hsm.rs  mod.rs  types.rs
crates/mpc-wallet-core/src/ops/: mod.rs
crates/mpc-wallet-core/src/paillier/: keygen.rs  mod.rs  mta.rs  zk_proofs.rs
crates/mpc-wallet-core/src/policy/: evaluator.rs  mod.rs  parser.rs  schema.rs
crates/mpc-wallet-core/src/protocol/: bls12_381.rs  cggmp21.rs  frost_ed25519.rs  frost_secp256k1.rs  gg20.rs  mod.rs  request_context.rs  sign_authorization.rs  sr25519.rs  stark.rs
crates/mpc-wallet-core/src/rbac/: mod.rs
crates/mpc-wallet-core/src/rpc/: mod.rs
crates/mpc-wallet-core/src/session/: mod.rs  state.rs
crates/mpc-wallet-core/src/transport/: jetstream.rs  mod.rs  nats.rs  session_key.rs  signed_envelope.rs
crates/mpc-wallet-core/tests/: e2e_tests.rs  property_tests.rs  protocol_integration.rs
crates/mpc-wallet-core/tests/e2e/: chain_signing.rs  distributed.rs  full_flow.rs  mod.rs  nats_transport.rs
docs/: AGENTS.md  API_REFERENCE.md  AUTH_SPEC.md  CHAIN_PROPOSAL.md  CLI_GUIDE.md  CONTRIBUTING.md  CRYPTOGRAPHY.md  DECISIONS.md  DEPLOYMENT.md  MONITORING.md  PRD.md  RUNBOOKS.md  SECURITY.md  SECURITY_FINDINGS.md  SGX_DESIGN.md  SPECS.md  SPRINT.md  SPRINT28_MATH_PROOFS.md  THREAT_MODEL.md
infra/docker/: Dockerfile  docker-compose.yml
infra/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
infra/local/: .env.example  Dockerfile.test  docker-compose.test.yml  docker-compose.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/aws/: main.tf
infra/terraform/modules/azure/: main.tf
infra/terraform/modules/gcp/: main.tf
retro/: RETRO.md  SESSION_RETRO_AUTH.md  SESSION_RETRO_SPRINT15.md
retro/decisions/: DEC-012_sign-authorization.md  DEC-013_remove-api-keys.md  DEC-014_redis-kms-migration.md  DEC-015_mpc-node-split.md  DEC-017_distributed_nonce.md
retro/sessions/: SESSION_RETRO_S18_S26.md  SESSION_RETRO_S28_PAILLIER_PERF.md
scripts/: demo.sh  local-infra.sh
services/api-gateway/: Cargo.toml
services/api-gateway/src/: config.rs  errors.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  state.rs  vault.rs  wallet_store.rs  whitelist.rs
services/api-gateway/src/auth/: client.rs  handshake.rs  kms_signer.rs  mod.rs  mtls.rs  redis_backend.rs  session.rs  session_jwt.rs  session_redis.rs  signer.rs  types.rs
services/api-gateway/src/middleware/: auth.rs  hmac.rs  mod.rs  rate_limit.rs
services/api-gateway/src/models/: request.rs  response.rs
services/api-gateway/src/org/: mod.rs
services/api-gateway/src/routes/: auth.rs  chains.rs  health.rs  mod.rs  transactions.rs  wallets.rs
services/api-gateway/src/webhooks/: mod.rs
services/api-gateway/tests/: auth_security_audit.rs  error_response_tests.rs
services/mpc-node/: Cargo.toml
services/mpc-node/src/: main.rs  rpc.rs
specs/: ARCHITECTURE.md  CHAIN_ROADMAP.md  EPICS.md  REDIS_KMS_MIGRATION_SPEC.md  SECURITY.md  SIGN_AUTHORIZATION_SPEC.md  STANDARDS.md
