[workspace]
resolver = "2"
members = [
    "crates/mpc-wallet-core",
    "crates/mpc-wallet-chains",
    "crates/mpc-wallet-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# MPC protocols
frost-core = { version = "2.1", features = ["serialization"] }
frost-secp256k1-tr = { version = "2.1", features = ["serialization"] }
frost-ed25519 = { version = "2.1", features = ["serialization"] }

# Directories
dirs = "5"

# Crypto primitives
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha3 = "0.10"
sha2 = "0.10"
blake2 = "0.10"

# Key storage encryption
aes-gcm = "0.10"
argon2 = "0.5"

# Blockchain SDKs
alloy = { version = "1.5", features = ["full"] }
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }

# Serialization
bcs = "0.1"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Transport
async-nats = "0.38"

# CLI
clap = { version = "4", features = ["derive"] }

# JWT
jsonwebtoken = "9"

# Utilities
hex = "0.4"
bs58 = "0.5"
bech32 = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
mpc-wallet-core = { path = "crates/mpc-wallet-core" }
mpc-wallet-chains = { path = "crates/mpc-wallet-chains" }
