[package]
name = "mpc-wallet-chains"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MPC wallet chain providers: EVM, Bitcoin, Solana, Sui"

[dependencies]
mpc-wallet-core = { workspace = true }

# Crypto
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
ripemd = { workspace = true }
sha3 = { workspace = true }
sha2 = { workspace = true }
blake2 = { workspace = true }

# Blockchain SDKs
alloy = { workspace = true }
bitcoin = { workspace = true }

# Serialization
bcs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Utilities
base64 = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
bech32 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
mpc-wallet-core = { path = "../mpc-wallet-core" }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "chain_benchmarks"
harness = false
