[package]
name = "mpc-wallet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MPC wallet CLI"

[[bin]]
name = "mpc-wallet"
path = "src/main.rs"

[dependencies]
mpc-wallet-core = { workspace = true }
mpc-wallet-chains = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
hex = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
rpassword = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
