[package]
name = "mpc-wallet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MPC wallet core: protocols, key storage, and transport"

[features]
default = ["gg20-distributed"]
gg20-simulation = []
gg20-distributed = []
local-transport = []
aws-kms = []

[dependencies]
# MPC protocols
frost-core = { workspace = true }
frost-secp256k1-tr = { workspace = true }
frost-ed25519 = { workspace = true }

# Crypto
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
schnorrkel = { workspace = true }
blst = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }

# Key storage encryption
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
async-nats = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
futures = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

# Utilities
hex = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
criterion = { workspace = true }
# E2E test deps
mpc-wallet-chains = { path = "../mpc-wallet-chains" }
reqwest = { workspace = true }
redis = { workspace = true }

[[bench]]
name = "mpc_benchmarks"
harness = false
required-features = ["local-transport"]
