[package]
name = "mpc-wallet-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MPC Wallet REST API Gateway (Axum)"

[lib]
name = "mpc_wallet_api"
path = "src/lib.rs"

[[bin]]
name = "mpc-wallet-api"
path = "src/main.rs"

[dependencies]
mpc-wallet-core = { path = "../../crates/mpc-wallet-core" }
mpc-wallet-chains = { path = "../../crates/mpc-wallet-chains" }

# Async
async-trait = { workspace = true }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
tower = { version = "0.5", features = ["util"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }

# Distributed storage
redis = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }

# Crypto — key exchange, signatures, AEAD
sha2 = { workspace = true }
hmac = { workspace = true }
subtle = "2"
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
chacha20poly1305 = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = "0.13"

# Secrets management
reqwest = { workspace = true }

# Utilities
uuid = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

base64 = { workspace = true }

[features]
default = []
# Enable when aws-sdk-kms is added for real KMS integration.
# Currently defines the interface with stub implementations.
aws-kms = []

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
