[package]
name = "mpc-wallet-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MPC Node — holds exactly one party's key share, participates in distributed protocols via NATS"

[[bin]]
name = "mpc-node"
path = "src/main.rs"

[dependencies]
mpc-wallet-core = { path = "../../crates/mpc-wallet-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
zeroize = { workspace = true }

# Utilities
hex = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
